[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/Market.gd" type="Script" id=1]
[ext_resource path="res://assets/market.png" type="Texture" id=2]
[ext_resource path="res://assets/container_market.png" type="Texture" id=3]
[ext_resource path="res://assets/market_back1.png" type="Texture" id=4]
[ext_resource path="res://assets/market_back2.png" type="Texture" id=5]
[ext_resource path="res://scenes/Item_Heart.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Item_Potion.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/font16.fnt" type="BitmapFont" id=8]
[ext_resource path="res://assets/coin.png" type="Texture" id=9]
[ext_resource path="res://fonts/font16Big.fnt" type="BitmapFont" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="Market" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
color = Color( 0, 0.0745098, 1, 1 )

[node name="Title" type="Sprite" parent="."]

transform/pos = Vector2( 638.757, 106.757 )
texture = ExtResource( 2 )

[node name="Container" type="Sprite" parent="."]

transform/pos = Vector2( 640, 432 )
texture = ExtResource( 3 )

[node name="BackButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 72.0
margin/right = 258.0
margin/bottom = 144.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 252.0
margin/right = 1088.0
margin/bottom = 612.0
scroll/horizontal = true
scroll/vertical = false

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]

rect/min_size = Vector2( 1217, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = 0.0
margin/right = 1216.0
margin/bottom = 0.0
custom_constants/separation = 324
alignment = 0

[node name="Item" parent="ScrollContainer/HBoxContainer" instance=ExtResource( 6 )]

[node name="Item2" parent="ScrollContainer/HBoxContainer" instance=ExtResource( 7 )]

margin/left = 324.0
margin/right = 324.0

[node name="Item3" parent="ScrollContainer/HBoxContainer" instance=ExtResource( 6 )]

margin/left = 648.0
margin/right = 648.0

[node name="Item4" parent="ScrollContainer/HBoxContainer" instance=ExtResource( 7 )]

margin/left = 972.0
margin/right = 972.0

[node name="Warning" type="Polygon2D" parent="."]

editor/display_folded = true
visibility/visible = false
polygon = Vector2Array( 384, 216, 384, 540, 960, 540, 960, 216 )
uv = Vector2Array(  )
color = Color( 0, 0.0745098, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Label" type="Label" parent="Warning"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 448.0
margin/top = 252.0
margin/right = 896.0
margin/bottom = 360.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 1
text = "Are you sure?"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Warning"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 512.0
margin/top = 396.0
margin/right = 640.0
margin/bottom = 468.0
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Yes"
flat = false

[node name="Button 2" type="Button" parent="Warning"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 704.0
margin/top = 396.0
margin/right = 832.0
margin/bottom = 468.0
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "No"
flat = false

[node name="Warning2" type="Polygon2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 3.05176e-05, -6.40001 )
transform/scale = Vector2( 1, 1.04 )
polygon = Vector2Array( 384, 180, 384, 540, 960, 540, 960, 180 )
uv = Vector2Array(  )
color = Color( 0, 0.0745098, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Label" type="Label" parent="Warning2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 448.0
margin/top = 248.0
margin/right = 896.0
margin/bottom = 356.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 1
text = "You don't have 
money for this!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ok" type="Button" parent="Warning2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 576.0
margin/top = 387.0
margin/right = 768.0
margin/bottom = 495.0
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ok!"
flat = false

[node name="coin" type="Sprite" parent="."]

transform/pos = Vector2( 1024, 108 )
transform/scale = Vector2( 2.5, 2.75 )
texture = ExtResource( 9 )

[node name="CoinLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1088.0
margin/top = 72.0
margin/right = 1216.0
margin/bottom = 144.0
custom_fonts/font = ExtResource( 10 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="btnPressed" from="ScrollContainer/HBoxContainer/Item" to="." method="_on_Item_btnPressed"]

[connection signal="btnPressed" from="ScrollContainer/HBoxContainer/Item2" to="." method="_on_Item2_btnPressed"]

[connection signal="btnPressed" from="ScrollContainer/HBoxContainer/Item3" to="." method="_on_Item3_btnPressed"]

[connection signal="btnPressed" from="ScrollContainer/HBoxContainer/Item4" to="." method="_on_Item4_btnPressed"]

[connection signal="pressed" from="Warning/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Warning/Button 2" to="." method="_on_Button_2_pressed"]

[connection signal="pressed" from="Warning2/ok" to="." method="_on_ok_pressed"]


